# U-Net-Ablation

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
configs/experiments/: consistency_prelim_full_skip.yaml  full_skip.yaml  highres_skip_only.yaml  no_skip.yaml
data/ADE20K_2017_05_30_consistency/: readme.txt
data/ADE20K_2017_05_30_consistency/images/consistencyanalysis/original_ade20k/: ADE_val_00001083_atr.txt  ADE_val_00001404_atr.txt  ADE_val_00001433_atr.txt  ADE_val_00001462_atr.txt  ADE_val_00001472_atr.txt  ADE_val_00001474_atr.txt  ADE_val_00001511_atr.txt  ADE_val_00001520_atr.txt  ADE_val_00001569_atr.txt  ADE_val_00001802_atr.txt  ADE_val_00001832_atr.txt  ADE_val_00001909_atr.txt  ADE_val_00001947_atr.txt
data/ADE20K_2017_05_30_consistency/images/consistencyanalysis/repeat_ade20k/: ADE_val_00001001_atr.txt  ADE_val_00001005_atr.txt  ADE_val_00001015_atr.txt  ADE_val_00001034_atr.txt  ADE_val_00001054_atr.txt  ADE_val_00001063_atr.txt  ADE_val_00001073_atr.txt  (+56 more)
data/ADE20K_2017_05_30_consistency/metadata/: train.jsonl  val.jsonl
scripts/: evaluate.py  prepare_ade20k.py  run_ablations.py  train.py
src/unet_ablation/: __init__.py
src/unet_ablation/data/: __init__.py  ade20k.py  metadata.py
src/unet_ablation/engine/: __init__.py  trainer.py
src/unet_ablation/metrics/: __init__.py  segmentation.py
src/unet_ablation/models/: __init__.py  unet.py
src/unet_ablation/utils/: __init__.py  config.py  io.py  runtime.py  visualization.py
tests/: conftest.py  test_engine.py  test_metrics.py  test_model.py  test_scripts.py  test_smoke.py
(+40 files in other folders)
